[gd_scene load_steps=12 format=3 uid="uid://bw7gwtjnheca7"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ry4j7"]
[ext_resource type="Texture2D" uid="uid://cqpe3u6lnn2ly" path="res://assets/Player-Sheet.png" id="2_7kvuq"]
[ext_resource type="Script" path="res://Player/FiniteStateMachine.gd" id="3_1cavx"]
[ext_resource type="Script" path="res://Player/PlayerNormalState.gd" id="4_1maay"]
[ext_resource type="Script" path="res://Player/PlayerTauntState.gd" id="5_ku7ci"]
[ext_resource type="Script" path="res://Player/PlayerRunState.gd" id="6_uhbm0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iai1d"]
radius = 24.0208

[sub_resource type="Animation" id="Animation_t1yuh"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xprwu"]
resource_name = "Move"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_hxt6b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olxgw"]
_data = {
"Idle": SubResource("Animation_t1yuh"),
"Move": SubResource("Animation_xprwu"),
"RESET": SubResource("Animation_hxt6b")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_ry4j7")

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("2_7kvuq")
hframes = 3
vframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iai1d")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_1cavx")
state = NodePath("PlayerNormalState")

[node name="PlayerNormalState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_1maay")
player = NodePath("../..")

[node name="PlayerTauntState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_ku7ci")
player = NodePath("../..")

[node name="PlayerRunState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_uhbm0")
player = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_olxgw")
}
